--- a/app/src/main/res/layout/act_image.xml
+++ b/app/src/main/res/layout/act_image.xml
@@ -17,4 +17,25 @@
         android:layout_marginTop="20dp"
         android:textStyle="bold"/>
 
+    <TextView
+        android:id="@+id/tvCaptureImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/when_capture_image_finish_then_show_app_and_save_directory_documents"
+        android:padding="20dp"
+        app:layout_constraintTop_toBottomOf="@id/tvCreateFolder"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="20dp"
+        android:background="@android:color/holo_purple"
+        android:gravity="center"/>
+
+    <ImageView
+        android:id="@+id/imvCaptureImage"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvCaptureImage"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
