--- a/app/src/main/res/layout/act_main.xml
+++ b/app/src/main/res/layout/act_main.xml
@@ -34,16 +34,17 @@
       android:textStyle="bold"/>
 
   <TextView
-      android:id="@+id/tvTaskPDF"
+      android:id="@+id/tvTaskDocument"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:padding="20dp"
-      android:text="@string/task_pdf"
+      android:text="Task Document"
       android:background="@android:color/holo_blue_dark"
       app:layout_constraintTop_toBottomOf="@id/tvTaskVideo"
       app:layout_constraintStart_toStartOf="parent"
       app:layout_constraintEnd_toEndOf="parent"
       android:layout_marginTop="20dp"
-      android:textStyle="bold"/>
+      android:textStyle="bold"
+      tools:ignore="HardcodedText" />
 
   </androidx.constraintlayout.widget.ConstraintLayout>
