--- a/app/src/main/res/layout/act_image.xml
+++ b/app/src/main/res/layout/act_image.xml
@@ -58,4 +58,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tvGetSingleImageUsingMediaStore"/>
 
+    <TextView
+        android:id="@+id/tvGetSingleImageUsingPhotoPicker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/get_single_image_using_photopicker"
+        app:layout_constraintTop_toBottomOf="@id/imvGetSingleImageUsingMediaStore"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:padding="20dp"
+        android:background="@android:color/holo_red_light"
+        android:textStyle="bold"/>
+
+    <ImageView
+        android:id="@+id/imvGetSingleImageUsingPhotoPicker"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tvGetSingleImageUsingPhotoPicker"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
