--- a/app/src/main/res/layout/act_image.xml
+++ b/app/src/main/res/layout/act_image.xml
@@ -1,111 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvCreateFolder"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/create_folder_in_directory_documents"
-        android:padding="20dp"
-        android:background="@android:color/holo_orange_dark"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:textStyle="bold"/>
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/tvCaptureImage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/when_capture_image_finish_then_show_app_and_save_directory_documents"
-        android:padding="20dp"
-        app:layout_constraintTop_toBottomOf="@id/tvCreateFolder"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/holo_purple"
-        android:gravity="center"/>
+        <TextView
+            android:id="@+id/tvCreateFolder"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/holo_orange_dark"
+            android:padding="20dp"
+            android:text="@string/create_folder_in_directory_documents"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/imvCaptureImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvCaptureImage"/>
+        <TextView
+            android:id="@+id/tvCaptureImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:background="@android:color/holo_purple"
+            android:gravity="center"
+            android:padding="20dp"
+            android:text="@string/when_capture_image_finish_then_show_app_and_save_directory_documents"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvCreateFolder" />
 
-    <TextView
-        android:id="@+id/tvGetSingleImageUsingMediaStore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/get_single_image"
-        app:layout_constraintTop_toBottomOf="@id/imvCaptureImage"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="20dp"
-        android:background="@android:color/holo_green_light"
-        android:textStyle="bold"/>
+        <ImageView
+            android:id="@+id/imvCaptureImage"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvCaptureImage" />
 
-    <ImageView
-        android:id="@+id/imvGetSingleImageUsingMediaStore"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvGetSingleImageUsingMediaStore"/>
+        <TextView
+            android:id="@+id/tvGetSingleImageUsingMediaStore"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_green_light"
+            android:padding="20dp"
+            android:text="@string/get_single_image"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imvCaptureImage" />
 
-    <TextView
-        android:id="@+id/tvGetSingleImageUsingPhotoPicker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/get_single_image_using_photopicker"
-        app:layout_constraintTop_toBottomOf="@id/imvGetSingleImageUsingMediaStore"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="20dp"
-        android:background="@android:color/holo_red_light"
-        android:textStyle="bold"/>
+        <ImageView
+            android:id="@+id/imvGetSingleImageUsingMediaStore"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGetSingleImageUsingMediaStore" />
 
-    <ImageView
-        android:id="@+id/imvGetSingleImageUsingPhotoPicker"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvGetSingleImageUsingPhotoPicker"/>
+        <TextView
+            android:id="@+id/tvGetSingleImageUsingPhotoPicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_red_light"
+            android:padding="20dp"
+            android:text="@string/get_single_image_using_photopicker"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imvGetSingleImageUsingMediaStore" />
 
-    <TextView
-        android:id="@+id/tvGetMultipleImageUsingPhotoPicker"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Get Multiple Image Using PhotoPicker"
-        app:layout_constraintTop_toBottomOf="@id/imvGetSingleImageUsingPhotoPicker"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:padding="20dp"
-        android:background="@android:color/holo_blue_light"
-        android:textStyle="bold"
-        tools:ignore="HardcodedText" />
+        <ImageView
+            android:id="@+id/imvGetSingleImageUsingPhotoPicker"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGetSingleImageUsingPhotoPicker" />
 
-    <ImageView
-        android:id="@+id/imvGetMultipleImageUsingPhotoPickerOne"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/imvGetMultipleImageUsingPhotoPickerTwo"
-        app:layout_constraintTop_toBottomOf="@id/tvGetMultipleImageUsingPhotoPicker"/>
+        <TextView
+            android:id="@+id/tvGetMultipleImageUsingPhotoPicker"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_blue_light"
+            android:padding="20dp"
+            android:text="Get Multiple Image Using PhotoPicker"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imvGetSingleImageUsingPhotoPicker"
+            tools:ignore="HardcodedText" />
 
-    <ImageView
-        android:id="@+id/imvGetMultipleImageUsingPhotoPickerTwo"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintStart_toEndOf="@id/imvGetMultipleImageUsingPhotoPickerOne"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvGetMultipleImageUsingPhotoPicker"/>
+        <ImageView
+            android:id="@+id/imvGetMultipleImageUsingPhotoPickerOne"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintEnd_toStartOf="@id/imvGetMultipleImageUsingPhotoPickerTwo"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/tvGetMultipleImageUsingPhotoPicker" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/imvGetMultipleImageUsingPhotoPickerTwo"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@id/imvGetMultipleImageUsingPhotoPickerOne"
+            app:layout_constraintTop_toBottomOf="@id/tvGetMultipleImageUsingPhotoPicker" />
+
+        <TextView
+            android:id="@+id/tvDownloadImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@android:color/holo_red_dark"
+            android:padding="20dp"
+            android:text="Download Image"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/imvGetMultipleImageUsingPhotoPickerOne"
+            tools:ignore="HardcodedText" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
